added some fixes

--- a/src/styles/right.scss
+++ b/src/styles/right.scss
@@ -68,6 +68,16 @@
           }
         }
       }
+
+      input:disabled + {
+        span {
+          &:before {
+            background-image: url("../../public/img/posotove-answer.svg");
+            border: none;
+          }
+        }
+      }
+      
     }
   }
 
